--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-calendar-timeline",
+  "name": "react-calendar-timeline-dayjs",
   "version": "0.28.0",
-  "description": "react calendar timeline",
+  "description": "react calendar timeline (dayjs version)",
   "main": "lib/index.js",
   "scripts": {
     "build": "npm run build:lib",
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
-    "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && node-sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak",
+    "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak",
     "lint": "eslint --ext .js --ext .jsx ./src",
     "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.js\"",
     "prepublish": "npm run build:lib",
@@ -18,13 +18,17 @@
     "lib",
     "src"
   ],
-  "homepage": "https://github.com/namespace-ee/react-calendar-timeline",
+  "homepage": "https://github.com/robcj/react-calendar-timeline-dayjs",
   "repository": {
     "type": "git",
-    "url": "https://github.com/namespace-ee/react-calendar-timeline.git"
+    "url": "https://github.com/robcj/react-calendar-timeline-dayjs.git"
   },
   "author": "Marius Andra <marius.andra@gmail.com>",
   "contributors": [
+    { 
+      "name": "Robin CJ",
+      "email": "dev@cameron-jones.net"
+    },
     {
       "name": "Stanisław Chmiela",
       "email": "sjchmiela@gmail.com"
@@ -99,8 +103,8 @@
     "memoize-one": "^5.1.1"
   },
   "peerDependencies": {
+    "dayjs": "*",
     "interactjs": "^1.3.4",
-    "moment": "*",
     "prop-types": "^15.6.2",
     "react": ">=16.3",
     "react-dom": ">=16.3"
@@ -117,7 +121,8 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "cross-env": "^5.1.4",
-    "css-loader": "^6.7.1",
+    "css-loader": "^7.1.2",
+    "dayjs": "^1.11.13",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^4.16.0",
@@ -134,9 +139,7 @@
     "jest-dom": "^3.5.0",
     "jest-watch-typeahead": "^0.3.1",
     "jsdom": "^11.5.1",
-    "moment": "^2.11.1",
-    "node-sass": "^7.0.1",
-    "prettier": "^1.10.2",
+    "prettier": "^3.3.3",
     "prettier-eslint-cli": "^4.7.0",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
@@ -146,10 +149,11 @@
     "react-testing-library": "^6.0.3",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "sass": "^1.79.5",
+    "sass-loader": "^16.0.2",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
