--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-calendar-timeline-dayjs",
-  "version": "0.28.0",
+  "version": "0.0.1",
   "description": "react calendar timeline (dayjs version)",
   "main": "lib/index.js",
   "scripts": {
     "build": "npm run build:lib",
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
     "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak",
-    "lint": "eslint --ext .js --ext .jsx ./src",
+    "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx ./src",
     "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.js\"",
     "prepublish": "npm run build:lib",
     "start": "webpack-dev-server --hot --host 0.0.0.0",
@@ -25,7 +25,7 @@
   },
   "author": "Marius Andra <marius.andra@gmail.com>",
   "contributors": [
-    { 
+    {
       "name": "Robin CJ",
       "email": "dev@cameron-jones.net"
     },
@@ -73,6 +73,7 @@
   },
   "jest": {
     "verbose": true,
+    "testEnvironment": "jsdom",
     "testMatch": [
       "**/__tests__/**/*.js"
     ],
@@ -112,40 +113,46 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
+    "@babel/eslint-parser": "^7.25.8",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "cross-env": "^5.1.4",
     "css-loader": "^7.1.2",
     "dayjs": "^1.11.13",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^4.16.0",
-    "eslint-config-prettier": "^2.9.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.8",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-jest": "^21.6.1",
-    "eslint-plugin-prettier": "^2.5.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-standard": "^5.0.0",
     "faker": "^4.1.0",
+    "globals": "^15.11.0",
     "interactjs": "^1.3.4",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.5.0",
-    "jest-watch-typeahead": "^0.3.1",
-    "jsdom": "^11.5.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
-    "prettier-eslint-cli": "^4.7.0",
+    "prettier-eslint-cli": "^8.0.1",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^5.3.4",
     "react-testing-library": "^6.0.3",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
@@ -155,5 +162,10 @@
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "overrides": {
+    "enzyme": {
+      "cheerio": "1.0.0-rc.12"
+    }
   }
 }
