Replace create-react-context

--- a/package.json
+++ b/package.json
@@ -100,7 +100,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "create-react-context": "^0.3.0",
     "element-resize-detector": "^1.1.12",
     "lodash.isequal": "^4.5.0",
     "memoize-one": "^5.1.1"
@@ -120,6 +119,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-react": "^7.0.0",
+    "@cfaester/enzyme-adapter-react-18": "^0.8.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@testing-library/jest-dom": "^6.5.0",
@@ -132,7 +132,6 @@
     "css-loader": "^7.1.2",
     "dayjs": "^1.11.13",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.8",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^6.2.1",
@@ -152,8 +151,8 @@
     "prettier-eslint-cli": "^8.0.1",
     "prop-types": "^15.8.1",
     "randomcolor": "^0.5.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
     "react-testing-library": "^6.0.3",
     "regenerator-runtime": "^0.13.2",
