Upgraded react-router-dom and other packages.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "npm run build:lib",
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
     "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak && cp types/index.d.ts lib/index.d.ts",
-    "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx ./src",
-    "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.js\"",
+    "lint": "./node_modules/.bin/eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "prepublish": "npm run build:lib",
     "start": "webpack-dev-server --hot --host 0.0.0.0",
     "test": "jest",
@@ -102,7 +102,7 @@
     "classnames": "^2.2.6",
     "element-resize-detector": "^1.1.12",
     "lodash.isequal": "^4.5.0",
-    "memoize-one": "^5.1.1"
+    "memoize-one": "^6.0.0"
   },
   "peerDependencies": {
     "dayjs": "*",
@@ -122,17 +122,17 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "cheerio": "^1.0.0-rc.12",
-    "cross-env": "^5.1.4",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "dayjs": "^1.11.13",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^6.2.1",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
@@ -148,12 +148,11 @@
     "prettier": "^3.3.3",
     "prettier-eslint-cli": "^8.0.1",
     "prop-types": "^15.8.1",
-    "randomcolor": "^0.5.3",
+    "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^5.3.4",
-    "react-testing-library": "^6.0.3",
-    "regenerator-runtime": "^0.13.2",
+    "react-router-dom": "^6.27.0",
+    "regenerator-runtime": "^0.14.1",
     "rimraf": "^2.6.2",
     "sass": "^1.79.5",
     "sass-loader": "^16.0.2",
