--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
     "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak && cp types/index.d.ts lib/index.d.ts",
     "lint": "./node_modules/.bin/eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "./node_modules/.bin/eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "prepublish": "npm run build:lib",
     "start": "webpack-dev-server --hot --host 0.0.0.0",
     "test": "jest",
@@ -133,6 +133,7 @@
     "dayjs": "^1.11.13",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
@@ -146,7 +147,7 @@
     "jest-watch-typeahead": "^2.2.2",
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
-    "prettier-eslint-cli": "^8.0.1",
+    "prettier-eslint": "^16.3.0",
     "prop-types": "^15.8.1",
     "randomcolor": "^0.6.2",
     "react": "^18.3.1",
