--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build:lib",
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
     "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak && cp types/index.d.ts lib/index.d.ts",
-    "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx ./src",
+    "lint": "./node_modules/.bin/eslint ./src",
     "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.js\"",
     "prepublish": "npm run build:lib",
     "start": "webpack-dev-server --hot --host 0.0.0.0",
@@ -100,7 +100,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "create-react-context": "^0.3.0",
     "element-resize-detector": "^1.1.12",
     "lodash.isequal": "^4.5.0",
     "memoize-one": "^5.1.1"
@@ -113,13 +112,13 @@
     "react-dom": ">=16.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.0",
-    "@babel/eslint-parser": "^7.25.8",
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/eslint-parser": "^7.28.5",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
-    "@babel/preset-env": "^7.5.2",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@testing-library/jest-dom": "^6.5.0",
@@ -131,8 +130,6 @@
     "cross-env": "^5.1.4",
     "css-loader": "^7.1.2",
     "dayjs": "^1.11.13",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.8",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^6.2.1",
@@ -152,10 +149,11 @@
     "prettier-eslint-cli": "^8.0.1",
     "prop-types": "^15.8.1",
     "randomcolor": "^0.5.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^5.3.4",
-    "react-testing-library": "^6.0.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.0.2",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
     "sass": "^1.79.5",
@@ -164,10 +162,5 @@
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
-  },
-  "overrides": {
-    "enzyme": {
-      "cheerio": "1.0.0-rc.12"
-    }
   }
 }
