--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npm run build:lib",
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
-    "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak && cp types/index.d.ts lib/index.d.ts",
+    "build:lib": "echo '!!! Building Library' && rm -rf lib && cross-env NODE_ENV=production babel src --out-dir lib && sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak && cp types/index.d.ts lib/index.d.ts",
     "lint": "./node_modules/.bin/eslint ./src",
     "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.js\"",
     "prepublish": "npm run build:lib",
@@ -119,48 +119,44 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.12.0",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.5.2",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^9.2.1",
-    "babel-plugin-react-remove-properties": "^0.3.0",
-    "cheerio": "^1.0.0-rc.12",
-    "cross-env": "^5.1.4",
+    "babel-jest": "^30.2.0",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-react-remove-properties": "^0.3.1",
+    "cross-env": "^10.1.0",
     "css-loader": "^7.1.2",
-    "dayjs": "^1.11.13",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "faker": "^4.1.0",
-    "globals": "^15.11.0",
+    "dayjs": "^1.11.19",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.2.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "faker": "^5.5.3",
+    "globals": "^16.5.0",
     "interactjs": "^1.3.4",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-watch-typeahead": "^2.2.2",
-    "jsdom": "^25.0.1",
-    "prettier": "^3.3.3",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-watch-typeahead": "^3.0.1",
+    "jsdom": "^26.1.0",
+    "prettier": "^3.7.4",
     "prettier-eslint-cli": "^8.0.1",
     "prop-types": "^15.8.1",
     "randomcolor": "^0.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.0.2",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-router": "^7.10.0",
     "regenerator-runtime": "^0.13.2",
-    "rimraf": "^2.6.2",
-    "sass": "^1.79.5",
-    "sass-loader": "^16.0.2",
+    "sass": "^1.94.2",
+    "sass-loader": "^16.0.6",
     "style-loader": "^4.0.0",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack": "^5.103.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
